# fashionMNIST

./: .gitignore  baselineModel.ipynb  baselineModel.slides.html  fashionData.py  network.py  nn.py  pyproject.toml  pytorchNN.ipynb
.ipynb_checkpoints/: Presentation-checkpoint.ipynb  Untitled-checkpoint.ipynb  baselineModel-checkpoint.ipynb  pytorchNN-checkpoint.ipynb
