[tool.poetry]
name = "fashion-mnist"
version = "0.1.0"
description = ""
authors = ["Max Mynter <maxmynter@me.com>"]
readme = "README.md"
packages = [{include = "fashion_mnist"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy3 = "^0.2"
numpy = "^1.25.1"
torch = "^2.0.1"
pandas = "^2.0.3"
torchvision = "^0.15.2"
matplotlib = "^3.7.2"
mlflow = "^2.4.2"
rise = "^5.7.1"
jupyterthemes = "^0.20.0"
jupyter-contrib-nbextensions = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
